src/flake8_bandit/snapshots/ruff__flake8_bandit__tests__S104_S104.py.snap
---
source: src/flake8_bandit/mod.rs
expression: checks
---
- kind:
    HardcodedBindAllInterfaces: ~
  location:
    row: 9
    column: 0
  end_location:
    row: 9
    column: 9
  fix: ~
  parent: ~
- kind:
    HardcodedBindAllInterfaces: ~
  location:
    row: 10
    column: 0
  end_location:
    row: 10
    column: 9
  fix: ~
  parent: ~
- kind:
    HardcodedBindAllInterfaces: ~
  location:
    row: 14
    column: 5
  end_location:
    row: 14
    column: 14
  fix: ~
  parent: ~
- kind:
    HardcodedBindAllInterfaces: ~
  location:
    row: 18
    column: 8
  end_location:
    row: 18
    column: 17
  fix: ~
  parent: ~

