src/flake8_bandit/snapshots/ruff__flake8_bandit__tests__S107_S107.py.snap
---
source: src/flake8_bandit/mod.rs
expression: checks
---
- kind:
    HardcodedPasswordDefault: default
  location:
    row: 5
    column: 28
  end_location:
    row: 5
    column: 37
  fix: ~
- kind:
    HardcodedPasswordDefault: posonly
  location:
    row: 13
    column: 44
  end_location:
    row: 13
    column: 53
  fix: ~
- kind:
    HardcodedPasswordDefault: kwonly
  location:
    row: 21
    column: 38
  end_location:
    row: 21
    column: 46
  fix: ~
- kind:
    HardcodedPasswordDefault: posonly
  location:
    row: 29
    column: 38
  end_location:
    row: 29
    column: 47
  fix: ~
- kind:
    HardcodedPasswordDefault: kwonly
  location:
    row: 29
    column: 61
  end_location:
    row: 29
    column: 69
  fix: ~

