src/flake8_bandit/snapshots/ruff__flake8_bandit__tests__S108_S108.py.snap
---
source: src/flake8_bandit/mod.rs
expression: checks
---
- kind:
    HardcodedTempFile: /tmp/abc
  location:
    row: 5
    column: 10
  end_location:
    row: 5
    column: 20
  fix: ~
  parent: ~
- kind:
    HardcodedTempFile: /var/tmp/123
  location:
    row: 8
    column: 10
  end_location:
    row: 8
    column: 24
  fix: ~
  parent: ~
- kind:
    HardcodedTempFile: /dev/shm/unit/test
  location:
    row: 11
    column: 10
  end_location:
    row: 11
    column: 30
  fix: ~
  parent: ~

