src/flake8_bandit/snapshots/ruff__flake8_bandit__tests__S108_override.snap
---
source: src/flake8_bandit/mod.rs
expression: checks
---
- kind:
    HardcodedTempFile: /foo/bar
  location:
    row: 15
    column: 10
  end_location:
    row: 15
    column: 20
  fix: ~
  parent: ~

